--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
 
     strategy:
       matrix:
-        arch: [amd64, aarch64, armhf, armv7]
+        arch: [amd64]
 
     steps:
       - name: Checkout repository
