--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 name: Hyundai Bluelink Control
-version: "1.1.3"
+version: "1.2.0"
 slug: hyundai-bluelink
-description: Control your Hyundai/Kia vehicle via Bluelink/UVO
+description: Control your Hyundai/Kia vehicle via Bluelink/UVO (FastAPI)
 url: https://github.com/fhfournier/home-assistant-hyundai-palisade-command
 arch:
   - aarch64
